# gin-server/api/v1/system/sys_captcha.go
@@ -15,7 +15,7 @@ import (
 // @Security ApiKeyAuth
 // @accept application/json
 // @Produce application/json
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"验证码获取成功"}"
+// @Success 200 {string} string "{"code": 20000,"data":{},"msg":"验证码获取成功"}"
 // @Router /api/v1/sysCaptcha [post]
 func Captcha(c *gin.Context) {
 	// 字符,公式,验证码配置
